# fastapi-langchain

./: .env.example  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  streamlit.yml
backend/app/app/api/v1/endpoints/: chat.py
backend/app/app/core/: config.py
backend/app/app/utils/: tools.py
backend/langchain_app/: Dockerfile  pyproject.toml
backend/langchain_app/app/: pyproject.toml  test.ipynb  test.py
backend/langchain_app/app/api/: models.py
backend/langchain_app/app/api/routes/: agent.py
backend/langchain_app/app/core/: agent.py  agent_state.py  agent_tools.py  consts.py  langchain_agent.py
backend/langchain_app/app/llm/: llm.py
backend/langchain_app/langchain_agent/: main.py
backend/langchain_app/langchain_agent/api/v1/endpoints/: chat.py
backend/langchain_app/langchain_agent/core/: config.py
backend/pandasai_app/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/pandasai_app/api/: models.py
backend/pandasai_app/api/routes/: agent.py  user.py
backend/pandasai_app/api/utils/: custom_json_encoder.py
backend/pandasai_app/core/agent/: agent_skills.py  pandasai_agent.py  pandasai_llm.py  pandasai_smart_df.py  pandasai_vector_store.py
backend/pandasai_app/core/agent/tests/climate_change/: questions.yml  tests_leads.py
backend/pandasai_app/core/agent/tests/leads/: questions.yml  tests_leads.py
backend/pandasai_app/core/agent/training/: config.yml  docs.yml  q_a_training.yml
backend/pandasai_app/core/agent/training/dataset/: metadata.yml
backend/pandasai_app/core/prompts/: get_formula_calculation.py
backend/pandasai_app/core/prompts/templates/: get_formula_calculation.tmpl
backend/pandasai_app/core/utils/: db_utils.py
backend/pandasai_app/db/: redshift_utils.py
frontend/: Dockerfile
frontend/app/: consts.py  main.py  pyproject.toml
frontend/app/helpers/: make_request.py
shared_libraries/: utils.py
