[tool.poetry]
name = "fastapi-langchain"
version = "0.1.0"
description = ""
authors = ["stolomeo911 <stefano.tolomeo91@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_langchain"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
