[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = ""
authors = ["stolomeo911 <stefano.tolomeo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.15.0"
transformers = "^4.42.4"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
langchain = "^0.2.9"
langgraph = "^0.1.8"
fastapi = "0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
